--- a/src/asn/asn1c/CMakeLists.txt
+++ b/src/asn/asn1c/CMakeLists.txt
@@ -5,3 +5,6 @@ add_library(asn-asn1c ${HDR_FILES} ${SRC_FILES})
 target_include_directories(asn-asn1c PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_compile_options(asn-asn1c PUBLIC -DASN_DISABLE_OER_SUPPORT)
+
+# Export Copy of Header Files to Build INCLUDE_DIR for External Projects
+copy_headers("${HDR_FILES}")
